Fix up Submit ticket footer styles on mobile and center ZendeskLogo in footer

--- a/src/component/chat/chatting/ChattingScreen.scss
+++ b/src/component/chat/chatting/ChattingScreen.scss
@@ -65,7 +65,7 @@
 }
 
 .zendeskLogoChatMobile {
-  bottom: #{48/$font-size}rem;
+  bottom: #{52/$font-size}rem;
 
   [dir='rtl'] & {
     right: #{12/$font-size}rem;
